--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,17 @@
 {% extends "layout.html" %}
 
-{% block body %}
+{% block title %}
+    Log In
+{% endblock %}
 
+{% block main %}
     <form action="/login" method="post">
-        <input autocomplete="off" autofocus name="name" placeholder="Name" type="text">
-        <input type="submit" value="Log In">
+        <div class="form-group">
+            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
+        </div>
+        <div class="form-group">
+            <input class="form-control" name="password" placeholder="Password" type="password">
+        </div>
+        <button class="btn btn-primary" type="submit">Log In</button>
     </form>
-
 {% endblock %}
