--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,7 +28,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbar">
-                {% if session.user_id %}
+                {% if session.username %}
                     <ul class="navbar-nav mr-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/hands">Hands</a></li>
                         <li class="nav-item"><a class="nav-link" href="/Rules">Rules</a></li>
@@ -40,20 +40,14 @@
                     </ul>
                 {% else %}
                     <ul class="navbar-nav ml-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/Create Account">Create Account</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/signup">Create Account</a></li>
                         <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
                     </ul>
                 {% endif %}
             </div>
         </nav>
 
-        {% if get_flashed_messages() %}
-            <header>
-                <div class="alert alert-primary border text-center" role="alert">
-                    {{ get_flashed_messages() | join(" ") }}
-                </div>
-            </header>
-        {% endif %}
+
 
         <main class="container p-5">
             {% block main %}{% endblock %}
