--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,9 +31,9 @@
                 {% if session.username %}
                     <ul class="navbar-nav mr-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/hands">Hands</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/Rules">Rules</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/Play">Play</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/Account">Account</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/rules">Rules</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/play">Play</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/account">Account</a></li>
                     </ul>
                     <ul class="navbar-nav ml-auto mt-2">
                         <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
