--- a/templates/play.html
+++ b/templates/play.html
@@ -6,5 +6,6 @@
 
 {% block main %}
     <form action="/play" method="post">
+        <button class="btn btn-primary" type="button">Play</button>
     </form>
 {% endblock %}
